opam-version: "2.0"
maintainer: "Reynir Björnsson <reynir@reynir.dk>"
authors: ["Reynir Björnsson <reynir@reynir.dk>"]
homepage: "https://github.com/robur-coop/builder-web"
dev-repo: "git+https://github.com/robur-coop/builder-web.git"
bug-reports: "https://github.com/robur-coop/builder-web/issues"
license: "ISC"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["sh" "-ex" "packaging/FreeBSD/create_package.sh"] {os = "freebsd"}
  ["sh" "-ex" "packaging/debian/create_package.sh"] {os-family = "debian"}
]

depends: [
  "ocaml" {>= "4.13.0"}
  "dune" {>= "2.7.0"}
  "builder" {>= "0.2.0"}
  "dream" {= "1.0.0~alpha4"}
  "cstruct" {>= "6.0.0"}
  "bos"
  "hex"
  "lwt" {>= "5.7.0"}
  "caqti" {>= "1.8.0"}
  "caqti-lwt"
  "caqti-driver-sqlite3"
  "pbkdf"
  "mirage-crypto-rng" {>= "0.11.0"}
  "scrypt-kdf"
  "opam-core"
  "opam-format" {>= "2.1.0"}
  "metrics" {>= "0.3.0"}
  "metrics-lwt" {>= "0.3.0"}
  "metrics-influx" {>= "0.3.0"}
  "metrics-rusage" {>= "0.3.0"}
  "ipaddr"
  "tyxml" {>= "4.3.0"}
  "ptime"
  "duration"
  "mirage-crypto"
  "asn1-combinators"
  "logs"
  "cmdliner" {>= "1.1.0"}
  "uri"
  "fmt" {>= "0.8.7"}
  "cmarkit"
  "tar"
  "owee"
  "solo5-elftool" {>= "0.3.0"}
  "decompress"
  "alcotest" {with-test}
  "ppx_deriving" {with-test}
  "ppx_deriving_yojson" {with-test}
]

synopsis: "Web interface for builder"
description: """
Builder-web takes in submissions of builds, typically from [builder](https://github.com/robur-coop/builder/), and displays the produced artifacts in a way that makes it easy to compare checksums and build status.
Produced binaries can be downloaded and executed.
[builds.robur.coop](https://builds.robur.coop/) itself runs builder-web.
"""
