opam-version: "2.0"
maintainer: "Reynir Björnsson <reynir@reynir.dk>"
authors: ["Reynir Björnsson <reynir@reynir.dk>"]
homepage: "https://github.com/robur-coop/builder-web"
dev-repo: "git+https://github.com/robur-coop/builder-web.git"
bug-reports: "https://github.com/robur-coop/builder-web/issues"
license: "ISC"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["sh" "-ex" "packaging/FreeBSD/create_package.sh"] {os = "freebsd"}
  ["sh" "-ex" "packaging/debian/create_package.sh"] {os-family = "debian"}
]

depends: [
  "ocaml" {>= "4.13.0"}
  "dune" {>= "2.7.0"}
  "builder" {>= "0.4.0"}
  "dream" {>= "1.0.0~alpha7"}
  "dream-encoding"
  "bos"
  "ohex" {>= "0.2.0"}
  "lwt" {>= "5.7.0"}
  "caqti" {>= "2.1.2"}
  "caqti-lwt"
  "caqti-driver-sqlite3"
  "mirage-crypto-rng" {>= "1.2.0"}
  "kdf"
  "opam-core"
  "opam-format" {>= "2.1.0"}
  "metrics" {>= "0.3.0"}
  "metrics-lwt" {>= "0.3.0"}
  "metrics-influx" {>= "0.3.0"}
  "metrics-rusage" {>= "0.3.0"}
  "ipaddr"
  "tyxml" {>= "4.3.0"}
  "ptime"
  "duration"
  "asn1-combinators" {>= "0.3.0"}
  "logs"
  "cmdliner" {>= "1.1.0"}
  "uri"
  "fmt" {>= "0.8.7"}
  "cmarkit" {>= "0.3.0"}
  "tar" {>= "3.0.0"}
  "tar-unix" {>= "3.0.0"}
  "cachet" {>= "0.2.0"}
  "solo5-elftool" {>= "0.4.0"}
  "decompress" {>= "1.5.0"}
  "digestif" {>= "1.2.0"}
  "uuidm" {>= "0.9.9"}
  "yojson"
  "alcotest" {>= "1.2.0" & with-test}
  "ppx_deriving" {with-test}
  "ppx_deriving_yojson" {with-test}
]

synopsis: "Web interface for builder"
description: """
Builder-web takes in submissions of builds, typically from [builder](https://github.com/robur-coop/builder/), and displays the produced artifacts in a way that makes it easy to compare checksums and build status.
Produced binaries can be downloaded and executed.
[builds.robur.coop](https://builds.robur.coop/) itself runs builder-web.
"""
x-maintenance-intent: [ "(latest)" ]
