opam-version: "2.0"
maintainer: "Reynir Björnsson <reynir@reynir.dk>"
authors: ["Reynir Björnsson <reynir@reynir.dk>"]
homepage: "https://github.com/robur-coop/builder-web"
dev-repo: "git+https://github.com/robur-coop/builder-web.git"
bug-reports: "https://github.com/robur-coop/builder-web/issues"
license: "ISC"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["sh" "-ex" "packaging/FreeBSD/create_package.sh"] {os = "freebsd"}
  ["sh" "-ex" "packaging/debian/create_package.sh"] {os-family = "debian"}
]

depends: [
  "ocaml" {>= "4.13.0"}
  "dune" {>= "2.7.0"}
  "builder" {>= "0.4.0"}
  "vif"
  "bos"
  "ohex" {>= "0.2.0"}
  "caqti" {>= "2.1.2"}
  "caqti-miou"
  "caqti-driver-sqlite3"
  "mirage-crypto-rng" {>= "1.2.0"}
  "kdf"
  "opam-core"
  "opam-format" {>= "2.1.0"}
  "tyxml" {>= "4.3.0"}
  "ptime"
  "duration"
  "asn1-combinators" {>= "0.3.0"}
  "logs"
  "cmdliner" {>= "1.1.0"}
  "mirage-logs"
  "uri"
  "fmt" {>= "0.8.7"}
  "cmarkit" {>= "0.3.0"}
  "cachet" {>= "0.0.2"}
  "solo5-elftool" {>= "0.4.0"}
  "digestif" {>= "1.2.0"}
  "uuidm" {>= "0.9.9"}
  "yojson"
  "magic-mime"
  "alcotest" {>= "1.2.0" & with-test}
  "ppx_deriving" {with-test}
  "ppx_deriving_yojson" {with-test}
]
#pin-depends: ["vif.dev" "git+https://git.robur.coop/robur/vif.git#master"]
pin-depends: ["vif.dev" "git+https://git.robur.coop/robur/vif.git#109102b1bb4ee1ef881ac06ac2e893c5e196f370"]

synopsis: "Web interface for builder"
description: """
Builder-web takes in submissions of builds, typically from [builder](https://github.com/robur-coop/builder/), and displays the produced artifacts in a way that makes it easy to compare checksums and build status.
Produced binaries can be downloaded and executed.
[builds.robur.coop](https://builds.robur.coop/) itself runs builder-web.
"""
x-maintenance-intent: [ "(latest)" ]
