(test
 (name test_builder_db)
 (modules test_builder_db)
 (libraries ptime.clock.os builder_db caqti.blocking alcotest mirage-crypto-rng.unix))

(test
 (name markdown_to_html)
 (modules markdown_to_html)
 (libraries builder_web cmarkit alcotest))

(test
 (name router)
 (modules router)
 (libraries builder_web fmt dream yojson alcotest)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson)))
